@@ -70,13 +70,13 @@ ACVT_CSFS
 AM_CONDITIONAL(AMHAVECSFS, test x"$have_csfs" = "xyes")
 
 # Correct install paths
-AS_IF([test x"$prefix" = "xNONE"], [prefix="$ac_default_prefix"])
-AS_IF([test x"$exec_prefix" = "xNONE"], [exec_prefix="\${prefix}"])
-AS_IF([test x"$includedir" = x -o "$includedir" = "\${prefix}/include"],
+AS_IF([test x"$prefix" = x -o x"$prefix" = "xNONE"], [prefix="$ac_default_prefix"])
+AS_IF([test x"$exec_prefix" = x -o x"$exec_prefix" = "xNONE"], [exec_prefix="\${prefix}"])
+AS_IF([test x"$inside_openmpi" = "xyes" -o "$includedir" = "\${prefix}/include"],
 [includedir="$includedir/vampirtrace"])
-AS_IF([test x"$datarootdir" = x -o "$datarootdir" = "\${prefix}/share"],
+AS_IF([test x"$inside_openmpi" = "xyes" -o "$datarootdir" = "\${prefix}/share"],
 [datarootdir="$datarootdir/vampirtrace"])
-AS_IF([test x"$docdir" = x -o "$docdir" = "\${datarootdir}/doc/\${PACKAGE_TARNAME}"],
+AS_IF([test "$docdir" = "\${datarootdir}/doc/\${PACKAGE_TARNAME}"],
 [docdir="\${datarootdir}/doc"])
 
 ACVT_CONF_TITLE([Compiler, preprocessor, and programs])
