@@ -3,9 +3,8 @@
 	  version of the OTF library
 	  (so it's possible to add these objects to 3rd-party shared libraries)
 	- fixed and enhanced calculation of trace file size in otfinfo
-	- added workaround for PGI compiler bug which occurred in otfprofile
-	  disable OpenMP if compiler version is less than 9.0-3
-	  (see http://www.pgroup.com/support/release_tprs_90.htm TPR 4337)
+	- disable OpenMP support in otfprofile if the PGI compiler
+	  is used to work around some compiler errors
 	- patched libtool:
 	  - to avoid a bug in detection of the PGI 10 C++ compiler
 	  - to detect IBM cross compilers on BlueGene/P
